Move to Alpine based docker images with Eclipse Temurin JRE 17