@@ -1,50 +1,47 @@
 # syntax=docker/dockerfile:1
-# multi-stage docker file, separate build and run steps
+
+# Multi-stage docker file with separate build and run steps for image size optimisation
 # https://docs.docker.com/develop/develop-images/multistage-build/
+# Use Eclipse Temurin JDK/JRE as a vendor-agnostic, high-qulity solution
+# with permissive FLOSS license
+# https://whichjdk.com/#adoptium-eclipse-temurin
 
 ###################
 ### Build stage ###
 ###################
 
-FROM clojure:openjdk-17-lein-bullseye AS build
-RUN mkdir -p /usr/src/app
-COPY project.clj /usr/src/app/
-WORKDIR /usr/src/app
-RUN lein deps
-COPY . /usr/src/app
-# Build uberjar
-RUN mv "$(lein uberjar | sed -n 's/^Created \(.*standalone\.jar\)/\1/p')" app.jar
+FROM clojure:temurin-17-lein-alpine@sha256:37968e7afb62937499c3773e9b713400da4abb358e6beb0ec9bae41a59715111 AS build
 
-# Build custom JRE image
-RUN $JAVA_HOME/bin/jlink \
-  --verbose \
-  --add-modules ALL-MODULE-PATH \
-  --strip-debug \
-  --no-man-pages \
-  --no-header-files \
-  --compress=2 \
-  --output /customjre
+# Create a working directory
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
+
+# Install deps as a separate step for layer caching
+COPY project.clj /usr/src/app/
+RUN lein deps
+
+# Compile uber-jar
+COPY . /usr/src/app
+RUN mv "$(lein uberjar | sed -n 's/^Created \(.*standalone\.jar\)/\1/p')" app.jar
 
 #################
 ### Run stage ###
 #################
 
-FROM debian:bullseye-slim
+FROM eclipse-temurin:17-jre-alpine@sha256:e1506ba20f0cb2af6f23e24c7f8855b417f0b085708acd9b85344a884ba77767 AS run
 
-# Use customer JRE from the build stage
-ENV JAVA_HOME=/jre
-ENV PATH="${JAVA_HOME}/bin:${PATH}"
-COPY --from=build /customjre $JAVA_HOME
-
-# Set up a user with no priviliges
-RUN adduser --no-create-home -u 1000 dienstplan
-
-# Copy the app
-RUN mkdir -p /usr/src/app && chown -R dienstplan /usr/src/app
-USER 1000
-COPY --from=build --chown=1000:1000 /usr/src/app/app.jar /usr/src/app/
-COPY --from=build --chown=1000:1000 /usr/src/app/resources /usr/src/app/resources
+# Create app directory for unpriviledged user
+RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
-# entrypoint
-CMD ["/jre/bin/java", "-jar", "app.jar"]
+# Create unpriviledged system user
+RUN adduser --disabled-password --no-create-home --uid 1000 dienstplan
+
+# Copy uber-jar from the build stage
+COPY --from=build /usr/src/app/app.jar /usr/src/app/
+COPY --from=build /usr/src/app/resources /usr/src/app/resources
+RUN chown -R 1000:1000 /usr/src/app
+
+# Run as unpriviledged user
+USER 1000
+CMD ["java", "-jar", "app.jar"]
